<resources>
    <string name="app_name">P01-DailyGoals</string>
    <string name="read">Read up on materials before class</string>
    <string name="goal">Did I achieve this goal today?</string>
    <string name="yes1">Yes</string>
    <string name="no1">No</string>
    <string name="arrive">Arrive on time so as not to miss important part of the lesson</string>
    <string name="my">My personal reflection today</string>
    <string name="ok">OK</string>
    <string name="attempt">Attempt the problem myself</string>
    <string name="done">done</string>
</resources>
